Upgrade to OpenVPN 2.6.12 and dco support.

--- a/Esp.Tools.OpenVPN.UI/Esp.Tools.OpenVPN.UI.csproj
+++ b/Esp.Tools.OpenVPN.UI/Esp.Tools.OpenVPN.UI.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Esp.Tools.OpenVPN.UI</RootNamespace>
     <AssemblyName>Esp.Tools.OpenVPN.UI</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -78,6 +78,7 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
