--- a/Esp.Tools.OpenVPN.ServiceHost/Esp.Tools.OpenVPN.ServiceHost.csproj
+++ b/Esp.Tools.OpenVPN.ServiceHost/Esp.Tools.OpenVPN.ServiceHost.csproj
@@ -70,6 +70,9 @@
     <CodeAnalysisIgnoreBuiltInRules>true</CodeAnalysisIgnoreBuiltInRules>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
