--- a/Esp.Tools.OpenVPN.UI/Esp.Tools.OpenVPN.UI.csproj
+++ b/Esp.Tools.OpenVPN.UI/Esp.Tools.OpenVPN.UI.csproj
@@ -123,6 +123,9 @@
     </Compile>
     <Compile Include="Model\ConnectionViewModel.cs" />
     <Compile Include="Model\ViewModelBase.cs" />
+    <Compile Include="PipeDisconnectedView.xaml.cs">
+      <DependentUpon>PipeDisconnectedView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ThirdParty\PasswordHelper.cs" />
     <Compile Include="TrayInfo.cs" />
     <Page Include="AboutDialog.xaml">
@@ -169,6 +172,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="PipeDisconnectedView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Themes\BureauBlack.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
